2016-02-03  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 37868: Src/Modules/curses.c, Src/Modules/param_private.c,
	Src/Modules/tcp.c, Src/Modules/termcap.c, Src/Modules/zftp.c,
	Src/Zle/complist.c, Src/Zle/zle_misc.c, Src/Zle/zle_utils.c,
	Src/cond.c, Src/exec.c, Src/glob.c, Src/jobs.c, Src/params.c,
	Src/prompt.c, Src/utils.c: add 'static' to file local variables.

2016-01-31  Barton E. Schaefer  <schaefer@zsh.org>

	* 37859: Src/text.c: NULL-terminate cond_binary_ops static array.

2016-01-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 37845: Doc/Zsh/builtins.yo: Forward-reference typeset instances
	where no parameter is created, and remove the obsolete statement
	about array assignments separated from typeset command on -p.

	* 37844: Doc/Zsh/builtins.yo: reorder typeset introduction to keep
	related concepts together.

2016-01-30  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37831: Doc/Zsh/builtins.yo: typeset: Document exit status
	difference from parameter assignment statements

2016-01-30  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 37838: Src/Builtins/rlimits.c, Src/Builtins/sched.c,
	Src/Modules/curses.c, Src/Modules/datetime.c, Src/Modules/db_gdbm.c,
	Src/Modules/files.c, Src/Modules/langinfo.c, Src/Modules/mapfile.c,
	Src/Modules/mathfunc.c, Src/Modules/newuser.c, Src/Modules/parameter.c,
	Src/Modules/pcre.c, Src/Modules/regex.c, Src/Modules/socket.c,
	Src/Modules/stat.c, Src/Modules/system.c, Src/Modules/tcp.c,
	Src/Modules/termcap.c, Src/Modules/terminfo.c, Src/Modules/zpty.c,
	Src/Modules/zselect.c, Src/Modules/zutil.c, Src/Zle/compctl.c,
	Src/Zle/computil.c, Src/Zle/zle_utils.c, Src/Zle/zle_word.c,
	Src/hashtable.c, Src/hist.c: use UNUSED() consistently

2016-01-29  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37833: README: Document 37804 in README.

	* 37797: StartupFiles/zshrc: StartupFiles/zshrc += run-help

	* 37752: Test/D04parameter.ztst: More tests for the previous
	patch.

	* 37700: Src/lex.c, Src/parse.c, Src/zsh.h,